# tt-connect

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLAN.md  README.md  TESTING.md  TRADEMARK.md  dev_tasks.py  get_token.py  mkdocs.yml  pyproject.toml  test_live_auth.py  todo.txt
.github/workflows/: connect-ci.yml  publish-main.yml  release.yml  version-bump-dev.yml
dev/: test_futures.py  test_live_auth_angelone.py  test_live_fno.py
docs/: ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  DESIRED_STATE.md  EXAMPLES.md  PROBLEMS.md  QUICKSTART.md  README.md  RELEASE_VERSIONING.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
docs_site/: authentication.md  broker-differences.md  error-handling.md  getting-started.md  gtt.md  index.md  instruments.md  market-data.md  orders.md  portfolio.md  realtime-websocket.md  websocket.md
docs_site/recipes/: cancel-all-open-orders.md  close-all-open-positions.md  first-order.md  recover-from-reconnect.md  stream-and-store-live-ticks.md
docs_site/reference/: clients.md  enums.md  exceptions.md  models.md
docs_site/troubleshooting/: auth-failures.md  duplicate-orders.md  instrument-not-found.md  order-rejected.md  websocket-reconnect.md
examples/: angelone.py  angelone_store.py  zerodha.py
tests/: conftest.py  test_zerodha_auth.py
tests/fixtures/: zerodha_instruments.csv
tests/integration/: conftest.py  test_client_init.py  (+4 more)
tt_connect/: __init__.py  capabilities.py  client.py  config.py  enums.py  exceptions.py  instruments.py  models.py  portfolio.py  sync_client.py
(+65 files in other folders)
