[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-connect"
version = "0.1.0"
description = "A unified API layer for all Indian brokers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyotp>=2.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
